feat(api): add endpoint to change user plan
